no need for this

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
 VERCEL_ENV=development
-POSTGRES_URL=postgresql://postgres:password@localhost:54320/postgres?-pooled
+POSTGRES_URL=postgresql://postgres:password@localhost:54320/postgres
